Bug 119770 - the LibreOffice crashed when i insert a Chart in a table (gtk3)
Summary: the LibreOffice crashed when i insert a Chart in a table (gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.3 all versions
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2018-09-09 17:44 UTC by ldfxs
Modified: 2018-09-20 10:02 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ldfxs 2018-09-09 17:44:10 UTC
Description:
Everytime i insert chart in table when i choose the data from,the LibreOffice
crashed.

Actual Results:
i try to insert chart in table,and then it crashed.

Expected Results:
 my PC's memory and swap is full of use,and then shutdown.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: zh-CN
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes
Comment 1 raal 2018-09-09 19:57:10 UTC
Confirm Version: 6.2.0.0.alpha0+
Build ID: 4b5fcd417587cfb9e6d8b61ecb037ab165eeb5b9
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3; 

Writer
 - insert table
 - click inside table
 - insert chart
 - finish wizzard
 - crash after click into table


regression, no crash in  5.1.6.2
Comment 2 Regis Perdreau 2018-09-09 20:21:00 UTC
No crash here...may be a test file ?

Version: 6.0.3.2
Build ID: 1:6.0.3-0ubuntu1
Threads CPU : 4; OS : Linux 4.15; UI Render : par défaut; VCL: x11; 
Locale : nl-NL (fr_FR.UTF-8); Calc: group

Version: 6.2.0.0.alpha0+
Build ID: 278e66488135c8fa2714520d056573c64ea803cf
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: fr-FR (fr_FR.UTF-8); Calc: CL
Comment 3 Xisco Faulí 2018-09-10 09:44:01 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=be08f61d6f4121079c534af386139db23d0dd2c3

author	Armin Le Grand <Armin.Le.Grand@cib.de>	2016-07-08 18:11:42 +0200
committer	Armin Le Grand <Armin.Le.Grand@cib.de>	2016-07-08 18:14:07 +0200
commit be08f61d6f4121079c534af386139db23d0dd2c3 (patch)
tree fda573f4bc29127224c2e6106e014df03cbea9e3
parent f374e01af32c7752b31455642e7d76f2056a2aeb (diff)
Disabled async/parallel chart loading for now

Bisected with: bibisect-linux-64-5.3

Adding Cc: to Armin Le Grand

@Armin, Do you remember why the async chart loading was disabled? Should the commit above be reverted in order to avoid the crash?
Comment 4 Xisco Faulí 2018-09-18 11:33:08 UTC
it seems to be GTK3 only! I can't reproduce it in

Version: 6.2.0.0.alpha0+
Build ID: 846675d6c0ff6838526f97961e95eca945c60eeb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Caolán, I thought you could be interested in this issue...
Comment 5 Caolán McNamara 2018-09-18 12:30:27 UTC
https://gerrit.libreoffice.org/#/c/60683/ makes it not crash for me
Comment 6 Commit Notification 2018-09-18 20:02:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e0432408840196e3f0af3c91ba4a42c70262b1e0

tdf#119770 nullptr GetGraphic return

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2018-09-19 07:46:01 UTC
that worked for me anyway, backport to 6-1 in gerrit
Comment 8 Xisco Faulí 2018-09-20 09:49:51 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: da9a539999fc8ae47a78542ce646005f3a9be868
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Caolán, Thanks for fixing this issue!
Comment 9 Commit Notification 2018-09-20 10:02:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2755bf801ee7105fdaee8221714909f839e2ca78&h=libreoffice-6-1

tdf#119770 nullptr GetGraphic return

It will be available in 6.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.