tdf#119770 nullptr GetGraphic return

Change-Id: I9e76b6704e7f82cd9d200ed6c5802101de264242